@@ -11,6 +11,10 @@ Version 2.6
 -----------
 (not released yet)
 
+- Added lexers:
+
+  * Ride (PR#1319)
+
 - The 256-color/true-color terminal formatters now support the italic attribute
   in styles (PR#1288)
 - Support HTTP 2/3 header (PR#1308)
